periodically saving. local storage is good. publish is somehow still not working.

--- a/shopping.html
+++ b/shopping.html
@@ -71,9 +71,9 @@
                     </div>
                 </div>
                 <div class="form-inline" style="float: right;">
-                    <button onclick="load()" class ="btn btn-primary" id=loadbutt>Load List</button>
-                    <button onclick="save()" class ="btn btn-primary" id=savebutt>Save List</button>
-                    <button onclick="clickedon()" class="btn btn-primary" id=gobutt>Add Item</button>
+                    <button onclick="loadShoppingList()" class ="btn btn-primary" id=loadbutt>Load List</button>
+                    <button onclick="saveShoppingList()" class ="btn btn-primary" id=savebutt>Save List</button>
+                    <button onclick="clickedAddItem()" class="btn btn-primary" id=gobutt>Add Item</button>
                 </div>
                 </div>
             </div>
