--- a/shopping.html
+++ b/shopping.html
@@ -71,6 +71,7 @@
                     </div>
                 </div>
                 <div class="form-inline" style="float: right;">
+                    <button onclick="removeAll()" class ="btn btn-primary" id=removebutt>Remove All</button>
                     <button onclick="loadShoppingList()" class ="btn btn-primary" id=loadbutt>Load List</button>
                     <button onclick="saveShoppingList()" class ="btn btn-primary" id=savebutt>Save List</button>
                     <button onclick="clickedAddItem()" class="btn btn-primary" id=gobutt>Add Item</button>
@@ -90,6 +91,7 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="js/storage.js?x=2" type=text/javascript></script>
         <script src="js/model.js?x=2" type=text/javascript></script>
         <script src="js/view.js?x=2" type=text/javascript></script>        
         <script src="js/shopping.js?x=2" type=text/javascript></script>
