--- a/static/testpage3.html
+++ b/static/testpage3.html
@@ -8,16 +8,16 @@
 <div id="foo"></div>
 </body>
 <script>
-    var xhttp= new XMLHttpRequest()
-    xhttp.onreadystatechange = function(){
-        console.log(this.readyState)
-        if (this.readyState==4 && this.status==200){
-            num=JSON.parse(xhttp.responseText)
-            document.getElementById("foo").innerHTML=num.number
-        }
-    }
-    xhttp.open("GET","/getnum",true)
-    xhttp.send()
-    console.log("sent request")
+    console.log("starting fetch")
+    fetch("/getnum")
+        .then(function(response){
+            console.log(response)
+            return response.json()
+        })
+        .catch(error=> console.error("error: ", error))
+        .then(function(myJson){
+            document.getElementById("foo").innerHTML = myJson.number;
+            console.log("all done")
+        })
 </script>
 </html>
