--- a/shopping.html
+++ b/shopping.html
@@ -94,6 +94,7 @@
         <script src="js/storage.js?x=2" type=text/javascript></script>
         <script src="js/model.js?x=2" type=text/javascript></script>
         <script src="js/view.js?x=2" type=text/javascript></script>        
+        <script src="js/flaskio.js?x=2" type=text/javascript></script>
         <script src="js/shopping.js?x=2" type=text/javascript></script>
     </body>
 </html>
